--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,20 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground; /* Background and text colors */
+    @apply scrollbar-hide; /* Apply scrollbar-hide class to hide scrollbars */
+    overflow: auto; /* Ensure scrolling is enabled */
+  }
+  /* CSS to hide scrollbar while maintaining scrolling */
+  .scrollbar-hide::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  /* Hide scrollbar for Internet Explorer, Edge, and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none;  /* Firefox */
   }
 }
 
